overflow problem fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   background-color: #061420;
+  overflow-y: hidden;
 }
 .brand-color{
   color: white;
