--- a/src/component/ArticaleDetails/ArticleDiv.css
+++ b/src/component/ArticaleDetails/ArticleDiv.css
@@ -2,6 +2,7 @@
     background-color: #141731;
     border-radius: 10px;
     padding: 10px;
+    overflow: hidden;
 }
 .article-div img{
     width: 100%;
