--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,4 +1,6 @@
-  
+.header-section{
+   overflow-x: hidden;
+}  
 .circle{
    height: 20px;
    width: 20px;
@@ -11,6 +13,7 @@
   position: absolute;
   top: 0;
   margin-top: 150px;
+  overflow: hidden;
 }
 .particle-area{
    position: relative;
