--- a/src/component/Navbar/nav.css
+++ b/src/component/Navbar/nav.css
@@ -1,9 +1,3 @@
-.navbar-toggler {
-    border-color: white;
-}
-.navbar-toggler-icon{
-    background-color:#e7f8f8;
-}
 @media (max-width: 768px) {
     .navbar{
         background-color: #061420;
@@ -12,4 +6,14 @@
 }
 .nav-container{
     margin-bottom: 20px;
+ }
+ .navbar .navbar-toggler{
+    color: green;
+    border: 2px solid green;
+ }
+ /* .navbar-toggler {
+     background-color: transparent;
+ } */
+ .navbar-toggler-icon{
+     background-color: cyan;
  }
